<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ocr.mareu.ui.MeetingListActivity">

    <item
        android:id="@+id/action"
        android:title="@string/action_sort"
        android:icon="@drawable/ic_filter_foreground"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_remove_filter"
                android:title="@string/action_remove_filter">
            </item>
            <item
                android:id="@+id/action_sort"
                android:title="@string/action_sort">
                <menu>

                    <item
                        android:id="@+id/sort_date_recent"
                        android:title="@string/sort_date_recent"/>
                    <item
                        android:id="@+id/sort_date_older"
                        android:title="@string/sort_date_older"/>
                    <item
                        android:id="@+id/sort_room_asc"
                        android:title="@string/sort_room_asc"/>
                    <item
                        android:id="@+id/sort_room_desc"
                        android:title="@string/sort_room_desc"/>
                </menu>
            </item>
            <item
                android:id="@+id/action_filter"
                android:title="@string/action_filter">
                <menu>

                    <item
                        android:id="@+id/filter_date"
                        android:title="@string/filter_date"/>
                    <item
                        android:id="@+id/filter_room"
                        android:title="@string/filter_room"/>
                </menu>
            </item>
        </menu>

    </item>

</menu>