<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.DetailActivity"
    android:id="@+id/detail_fragment_layout">

    <TextView
        android:id="@+id/room_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_detail"
        android:paddingStart="@dimen/padding_layout_detail_left"
        android:paddingEnd="@dimen/padding_layout_detail"
        android:paddingBottom="@dimen/padding_layout_detail_bottom"
        android:paddingTop="@dimen/padding_layout_detail_top"
        android:hint="@string/meeting_room"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/room_name"
        android:padding="@dimen/padding_layout"
        android:layout_margin="@dimen/margin_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/imgTopic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_topic"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="@dimen/margin_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/info_topic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/meeting_topic"
                android:textSize="@dimen/text_size"
                android:maxLines="2"
                android:textColor="@color/colorText"
                app:layout_constraintLeft_toRightOf="@id/imgTopic"
                app:layout_constraintTop_toTopOf="@id/imgTopic"
                android:layout_marginStart="@dimen/margin_detail"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/imgTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_time"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="@dimen/margin_detail"
                android:layout_marginTop="@dimen/margin_detail_top"
                />

            <TextView
                android:id="@+id/info_date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/date_time"
                android:textSize="@dimen/text_size"
                android:maxLines="2"
                android:textColor="@color/colorText"
                android:layout_marginStart="@dimen/margin_detail"
                android:layout_marginTop="@dimen/margin_detail_top"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgParticipants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_participants"
                android:layout_marginTop="@dimen/margin_detail_top"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:id="@+id/recycler_part"
                tools:listitem="@layout/fragment_participant_item"
                android:layout_marginStart="@dimen/margin_detail"
                android:layout_marginTop="@dimen/margin_detail_top"
                />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>